[package]
name = "reasonable"
version = "0.1.0"
authors = [
    "Jonathan Gopel <jgopel@gmail.com>",
    "Tony Scimone <scimoneaj@gmail.com>",
]
edition = "2024"
description = "A rate-limiting library that enforces a cooldown period after a resource has been used (return-time based)."
license-file = "LICENSE"
homepage = "https://github.com/jgopel/reasonable"
repository = "https://github.com/jgopel/reasonable"
readme = "README.md"
keywords = ["rate-limit", "cooldown", "concurrency"]
categories = ["concurrency", "algorithms"]
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
chrono = "0.4.42"
thiserror = "2.0.17"
tracing = "0.1.41"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }

[lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
# Enable all warnings
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
