[tool.poetry]
package-mode = false

[project]
name = "reasonable"
version = "0.1.0"
description = "Reasonable rate limiter implemenation in Rust."
authors = [
    {name = "Jonathan Gopel",email = "jgopel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "pre-commit"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
